--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="C:\Users\pc\Desktop\newton school\projects\style.css">
+<link rel="stylesheet" href="https://github.com/pavanchoudharipc1/ProjectofNewtonSchool/blob/main/style.css">
 <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 <title>Virat Kohli</title>
